--- a/warehousemgr/Pages/Index.cshtml
+++ b/warehousemgr/Pages/Index.cshtml
@@ -1,10 +1,81 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "ware mgr";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<script src="~/js/index.js"></script>
+<style>
+    .layui-body > .layui-tab > .layui-tab-content > .layui-tab-item, .wrapper-tab-content {
+        position: fixed;
+        top: 111px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
+</style>
+<body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+        <div class="layui-header">
+            <div class="layui-logo">x - ware</div>
+            <!-- 头部区域（可配合layui已有的水平导航） -->
+            <ul class="layui-nav layui-layout-left" lay-filter="top-nav">
+                <li class="layui-nav-item">
+                    <a href="javascript:;">仓库管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" page-link="stock/procurement" nav-page="procurement" lay-id="procurement">采购入库</a></dd>
+                        <dd><a href="javascript:;" page-link="stock/outofstock" nav-page="outofstock" lay-id="outofstock">出库</a></dd>
+                        <dd><a href="javascript:;" page-link="factory/factory" nav-page="factory" lay-id="factory">借还货</a></dd>
+                        <dd><a href="javascript:;" page-link="stock/stock" nav-page="stock" lay-id="stock">盘点</a></dd>
+                        <dd><a href="javascript:;" page-link="stock/stock" nav-page="stock" lay-id="stock">警戒</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">档案</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">导航管理</a></dd>
+                        <dd><a href="javascript:;">消息管理</a></dd>
+                        <dd><a href="javascript:;">授权管理</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">统计</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">入库</a></dd>
+                        <dd><a href="javascript:;">出库</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;" page-link="user/index" nav-page="user-index" lay-id="user-index">用户管理</a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">系统配置</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">数据管理</a></dd>
+                        <dd><a href="javascript:;">事件记录</a></dd>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="layui-nav layui-layout-right">
+                <li class="layui-nav-item">
+                    <a href="javascript:;">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                        <span id="info_real_name"></span>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">个人中心</a></dd>
+                        @*<dd><a href="javascript:;">安全设置</a></dd>*@
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="javascript:;" id="login-out">退出</a></li>
+            </ul>
+        </div>
+        <div class="layui-body" style="left:0;bottom:0;">
+            <div class="layui-tab layui-tab-brief" lay-allowClose="true" lay-filter="main-tab">
+                <ul class="layui-tab-title">
+                </ul>
+                <div class="layui-tab-content">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
