增加权限和采购申请页面

--- a/warehousemgr/Pages/Index.cshtml
+++ b/warehousemgr/Pages/Index.cshtml
@@ -22,7 +22,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">仓库管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" page-link="stock/procurement" nav-page="procurement" lay-id="procurement">采购入库</a></dd>
+                        <dd><a href="javascript:;" page-link="procurement/index" nav-page="procurement" lay-id="procurement">采购入库</a></dd>
                         <dd><a href="javascript:;" page-link="stock/outofstock" nav-page="outofstock" lay-id="outofstock">出库</a></dd>
                         <dd><a href="javascript:;" page-link="factory/factory" nav-page="factory" lay-id="factory">借还货</a></dd>
                         <dd><a href="javascript:;" page-link="stock/stock" nav-page="stock" lay-id="stock">盘点</a></dd>
