调整采购入库单申请

--- a/warehousemgr/Pages/Procurement/ApplyProcurement.cshtml
+++ b/warehousemgr/Pages/Procurement/ApplyProcurement.cshtml
@@ -27,7 +27,7 @@
         <div>
             <div style="text-align: center;">
                 <div class="layui-btn-container">
-                    <button type="button" class="layui-btn" id="btn-user-add">添加物品</button>
+                    <button type="button" class="layui-btn" id="btn-product-add">添加物品</button>
                     <button type="button" class="layui-btn" style="display:none;" id="btn-submit">提交</button>
                 </div>
             </div>
